# Glyph

./: .gitignore  go.mod  go.sum
.github/workflows/: ci.yml  codeql.yml  demo-artifact.yml  excavator-smoke.yml  js-supply-chain.yml  release-image.yml  release.yml  slsa.yml
apps/desktop-shell/: package.json  playwright.config.ts  pnpm-lock.yaml
apps/desktop-shell/src-tauri/: Cargo.toml
apps/desktop-shell/src-tauri/src/: main.rs
apps/desktop-shell/src/components/: crash-diagnostics.tsx
apps/desktop-shell/src/lib/: ipc.ts
apps/desktop-shell/src/providers/: error-boundary.tsx
apps/desktop-shell/src/routes/: __root.tsx  cases.tsx  flows.tsx
apps/desktop-shell/tests/: a11y.spec.ts  color-vision.spec.ts
internal/seer/: detector.go  detector_test.go
plugins/seer/: README.md
